# NeuroSchemaX

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  architecture.md  cli.md  examples.md  index.md  limitations.md  model-support.md  packaging.md  quickstart.md  troubleshooting.md
examples/: colab_quickstart.py  export_nnsvg_json.py  manual_spec_to_svg.py  recommend_view.py  resnet_like.py  summarize_model.py  tiny_cnn_to_svg.py  tiny_mlp_to_html.py  transformer_like.py  yaml_spec.py
sample_configs/: debug.yaml  paper.yaml  readme.yaml  thesis.yaml
src/neuroschemax/: __init__.py  _display.py  cli.py  exceptions.py  version.py
src/neuroschemax/api/: __init__.py  export.py  figure.py  parse.py  render.py  summarize.py
src/neuroschemax/core/: __init__.py  aliases.py  config.py  contracts.py  enums.py  validation.py
src/neuroschemax/exporters/: __init__.py  debug_json.py  nnsvg.py  paper_json.py
src/neuroschemax/ingest/: __init__.py  base.py  manual_spec_adapter.py  onnx_adapter.py  pytorch_adapter.py  tensorflow_adapter.py
src/neuroschemax/ir/: __init__.py  graph_ir.py  semantic_ir.py
src/neuroschemax/normalize/: __init__.py  attr_extractor.py  block_fuser.py  branch_analyzer.py  confidence.py  family_recognizer.py  op_normalizer.py  shape_normalizer.py  skip_detector.py  tensor_analyzer.py
src/neuroschemax/presets/: __init__.py  debug.py  paper.py  readme.py  thesis.py
src/neuroschemax/visualization/: __init__.py  compat.py  nnsvg_html.py  nnsvg_mapper.py  nnsvg_runtime.py  nnsvg_schema.py  text.py
src/neuroschemax/visualization/assets/: AlexNet.js  FCNN.js  LeNet.js  util.js
tests/: test_api_simple.py  test_arch_warnings.py  test_cli_smoke.py  test_examples_exist.py  test_imports.py  test_onnx_parsing.py  test_package_data.py  test_structure.py
