[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroschemax"
version = "0.1.0"
description = "Neural network architecture visualization & export toolkit, powered by NN-SVG."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "NeuroSchemaX Contributors" }]
keywords = [
    "neural-network", "visualization", "nn-svg", "onnx",
    "architecture", "diagram", "svg", "deep-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "onnx>=1.14",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
svg = ["playwright>=1.40"]
torch = ["torch>=2.0"]
tf = ["tensorflow>=2.12"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]
all = [
    "playwright>=1.40",
    "torch>=2.0",
    "tensorflow>=2.12",
]

[project.urls]
Homepage = "https://github.com/neuroschemax/neuroschemax"
Documentation = "https://github.com/neuroschemax/neuroschemax/tree/main/docs"
Issues = "https://github.com/neuroschemax/neuroschemax/issues"
Source = "https://github.com/neuroschemax/neuroschemax"

[project.scripts]
neuroschemax = "neuroschemax.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neuroschemax = [
    "visualization/assets/*.js",
    "visualization/assets/fonts/*.json",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]
